// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeGreaterOrEqualThan should fail due to expected be bigger than received (isNot true) 1`] = `
Object {
  "message": "    
    expect([32mexpected[39m).not.toBeGreaterOrEqualThan([31mreceived[39m)
    
    expect: 4 < 2.
    
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan Object.<anonymous> (tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:54:52)",
}
`;

exports[`testing toBeGreaterOrEqualThan should fail due to expected be less than received 1`] = `
Object {
  "message": "    
    expect([32mexpected[39m).toBeGreaterOrEqualThan([31mreceived[39m)
    
    expect: 1 >= 2.
    
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan Object.<anonymous> (tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:49:48)",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'expected' not to be a number 1`] = `
Object {
  "message": "    
    value is not a number.
    received: '[31mstring[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:39:55",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'expected' not to be a number 2`] = `
Object {
  "message": "    
    value is not a number.
    received: '[31mstring[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:39:55",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'expected' not to be a number 3`] = `
Object {
  "message": "    
    value is not a number.
    received: '[31mboolean[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:39:55",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'expected' not to be a number 4`] = `
Object {
  "message": "    
    value is not a number.
    received: '[31mboolean[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:39:55",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'expected' not to be a number 5`] = `
Object {
  "message": "    
    value is not a number.
    received: '[31marray[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:39:55",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'received' not to be a number 1`] = `
Object {
  "message": "    
    received is not a number.
    received: '[31mstring[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:44:48",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'received' not to be a number 2`] = `
Object {
  "message": "    
    received is not a number.
    received: '[31mstring[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:44:48",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'received' not to be a number 3`] = `
Object {
  "message": "    
    received is not a number.
    received: '[31mboolean[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:44:48",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'received' not to be a number 4`] = `
Object {
  "message": "    
    received is not a number.
    received: '[31mboolean[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:44:48",
}
`;

exports[`testing toBeGreaterOrEqualThan should return false for 'received' not to be a number 5`] = `
Object {
  "message": "    
    received is not a number.
    received: '[31marray[39m'
",
  "pass": false,
  "trace": "    at toBeGreaterOrEqualThan tests\\\\expect\\\\matchers\\\\toBeGreaterOrEqualThan.test.ts:44:48",
}
`;
